--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /*Homepage css*/
 
 #headerhome {
@@ -17,7 +18,7 @@
     margin:auto;
    
 
-}
+} 
 #navbarhome {
     background-color: #1D3461;
     height: 50px;
@@ -32,8 +33,8 @@
     width: 195px;
     float: left; 
 }
-
-li a {
+/* CHANGED CSS */
+#navbarlisthome a {
     text-decoration: none; 
     color: white;
     line-height: 50px; 
@@ -42,12 +43,13 @@ li a {
     border-left:0.5px solid white;
     text-align: center;
     font-family: 'Merriweather Sans', sans-serif;
-}
+} 
 
-li a:hover {
+#navbarlisthome a:hover {
     background-color: white;
     color: #247BA0;
-}
+} 
+/* END OF CHANGED CSS */
 
 #imagehome {
     width: 335px;
@@ -184,7 +186,8 @@ a:hover {
     float: left; 
 }
 
-li a {
+/* CHANGED CSS */
+#navbarlist a {
     text-decoration: none; 
     color: white;
     line-height: 50px; 
@@ -193,12 +196,14 @@ li a {
     border-left:0.5px solid white;
     text-align: center;
     font-family: 'Merriweather Sans', sans-serif;
-}
+} 
 
-li a:hover {
+#navbarlist a:hover {
     background-color: white;
     color: #247BA0;
-}
+} 
+
+/* END OF CHANGED CSS */
 
 /*CSS for images*/
 #imageother {
@@ -218,16 +223,17 @@ li a:hover {
 
 
 /*Paragraphs on information page*/
+
 .text {
     float: right;
     margin-left: 502px;
-    margin-right: 4px;
+    margin-right: 4px; 
     font-family: 'Open Sans', sans-serif;
-    font-size: 18.45px;
+    font-size: 18.45px; 
     position: absolute;
-    top: 150px;
+    top: 150px; 
 
-}
+}             
 
 /*Paragraphs on exercise pages*/
 #paragraph {
@@ -284,7 +290,39 @@ li a:hover {
 
 h1 {
     text-align: center;
+}
 
+
+
+/*CSS for workout planner*/
+
+#pageLinks {
+    color: black;
+    float: right;
+    margin-left: 502px;
+    margin-right: 4px; 
+    font-family: 'Open Sans', sans-serif;
+    font-size: 25px; 
+    position: absolute;
+    top: 150px; 
+    
+
+}
+
+#workoutlink {
+    text-decoration: underline;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+}
+
+.delete-link {
+    color: black;
+    font-weight: bold;
+
+}
+
+.delete-link:hover {
+    color:#247BA0;
 }
 
 
